--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -1,5 +1,5 @@
 <templateSet group="JavaScript">
-  <template name="tii" value="Ti.API.info(&quot;$END$&quot;);" toReformat="false" toShortenFQNames="true">
+  <template name="tii" value="Ti.API.info(&quot;$END$&quot;);" description="" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
     </context>
